sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:11: error: 'while' expected but '}' found.
} 
^