sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var len:Int=getValueCount()
  do {
    for (i <- 0 to len-2) {
      if (!isSmaller(i,i+1)) {
        swap(i,i+1);
      }
    }
  }
}